--- a/Builds/VisualStudio2017/fxseq_SharedCode.vcxproj
+++ b/Builds/VisualStudio2017/fxseq_SharedCode.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="..\..\Source\SequencerComponent.cpp"/>
     <ClCompile Include="..\..\Source\EffectComponent.cpp"/>
     <ClCompile Include="..\..\Source\OptionsComponent.cpp"/>
+    <ClCompile Include="..\..\Source\OutputComponent.cpp"/>
     <ClCompile Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.cpp">
       <ExcludedFromBuild>true</ExcludedFromBuild>
     </ClCompile>
@@ -2809,6 +2810,7 @@
     <ClInclude Include="..\..\Source\SequencerComponent.h"/>
     <ClInclude Include="..\..\Source\EffectComponent.h"/>
     <ClInclude Include="..\..\Source\OptionsComponent.h"/>
+    <ClInclude Include="..\..\Source\OutputComponent.h"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\buffers\juce_AudioChannelSet.h"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\buffers\juce_AudioDataConverters.h"/>
