--- a/Builds/VisualStudio2017/fxseq_SharedCode.vcxproj.filters
+++ b/Builds/VisualStudio2017/fxseq_SharedCode.vcxproj.filters
@@ -646,6 +646,9 @@
     <ClCompile Include="..\..\Source\OptionsComponent.cpp">
       <Filter>fxseq</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\OutputComponent.cpp">
+      <Filter>fxseq</Filter>
+    </ClCompile>
     <ClCompile Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.cpp">
       <Filter>JUCE Modules\juce_audio_basics\audio_play_head</Filter>
     </ClCompile>
@@ -3580,6 +3583,9 @@
       <Filter>fxseq</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\OptionsComponent.h">
+      <Filter>fxseq</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\OutputComponent.h">
       <Filter>fxseq</Filter>
     </ClInclude>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h">
