Editor class implementation in progress

--- a/Builds/MacOSX/Info-VST3.plist
+++ b/Builds/MacOSX/Info-VST3.plist
@@ -8,7 +8,7 @@
     <key>CFBundleIconFile</key>
     <string></string>
     <key>CFBundleIdentifier</key>
-    <string>com.yourcompany.fxseq</string>
+    <string>com.ssabug.fxseq</string>
     <key>CFBundleName</key>
     <string>fxseq</string>
     <key>CFBundleDisplayName</key>
