--- a/Builds/VisualStudio2017/resources.rc
+++ b/Builds/VisualStudio2017/resources.rc
@@ -15,6 +15,7 @@ BEGIN
   BEGIN
     BLOCK "040904E4"
     BEGIN
+      VALUE "CompanyName",  "ssabug\0"
       VALUE "FileDescription",  "fxseq\0"
       VALUE "FileVersion",  "1.0.0\0"
       VALUE "ProductName",  "fxseq\0"
