--- a/Builds/VisualStudio2017/fxseq_SharedCode.vcxproj
+++ b/Builds/VisualStudio2017/fxseq_SharedCode.vcxproj
@@ -2814,6 +2814,7 @@
     <ClInclude Include="..\..\Source\OutputComponent.h"/>
     <ClInclude Include="..\..\Source\SequenceSequencerComponent.h"/>
     <ClInclude Include="..\..\Source\FaustEchoEffect.h"/>
+    <ClInclude Include="..\..\Source\FaustRingModEffect.h"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\buffers\juce_AudioChannelSet.h"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\buffers\juce_AudioDataConverters.h"/>
