--- a/Builds/VisualStudio2017/fxseq_SharedCode.vcxproj.filters
+++ b/Builds/VisualStudio2017/fxseq_SharedCode.vcxproj.filters
@@ -3597,6 +3597,9 @@
     <ClInclude Include="..\..\Source\FaustEchoEffect.h">
       <Filter>fxseq</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Source\FaustRingModEffect.h">
+      <Filter>fxseq</Filter>
+    </ClInclude>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h">
       <Filter>JUCE Modules\juce_audio_basics\audio_play_head</Filter>
     </ClInclude>
