--- a/Builds/VisualStudio2017/fxseq_SharedCode.vcxproj.filters
+++ b/Builds/VisualStudio2017/fxseq_SharedCode.vcxproj.filters
@@ -6795,6 +6795,9 @@
     <ClInclude Include="..\..\JuceLibraryCode\JuceHeader.h">
       <Filter>JUCE Library Code</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\JuceLibraryCode\JuceLV2Defines.h">
+      <Filter>JUCE Library Code</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\JuceLibraryCode\JucePluginDefines.h">
       <Filter>JUCE Library Code</Filter>
     </ClInclude>
